--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".Ingresar"
+            android:label="@string/title_activity_ingresar" >
+        </activity>
+        <activity
+            android:name=".Seleccionar"
+            android:label="@string/title_activity_seleccionar" >
+        </activity>
     </application>
 
 </manifest>
