--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:name=".Ingresar"
             android:label="@string/title_activity_ingresar" >
         </activity>
+        <activity
+            android:name=".Resultado"
+            android:label="@string/title_activity_resultado_d" >
+        </activity>
     </application>
 
 </manifest>
